<resources>
    <string name="app_name">Tennis-Padel</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Sign In</string>
    <string name="click_to_register">Click to Sign Up</string>
    <string name="Logout">Logout</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="profile">PROFILE</string>
    <string name="book_lesson">BOOK</string>
    <string name="nameBio">Name</string>
    <string name="lastNameBio">Last Name</string>
    <string name="bioBio">Bio</string>
    <string name="reputationBio">Reputation</string>
    <string name="edit">Edit</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="rank">Rank</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="report">Report</string>
    <string name="star">★</string>
</resources>