<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImageOther"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:focusableInTouchMode="false"
        android:focusable="false"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/left_guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/winsText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/wins"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/profileImageOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/winsNumberOther"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@id/profileImageOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lossesText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/losses"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/winsNumberOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lossesNumberOther"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/winsNumberOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rankText"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/rank"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/lossesNumberOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/rankNumberOther"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/lossesNumberOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameProfileOther"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/nameBio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImageOther" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nameInProfileOther"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameProfileOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastNameProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lastNameBio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameInProfileOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastnameInProfileOther"
        android:layout_width="0dp"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameProfile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bioProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bioBio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastnameInProfileOther" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bioInProfileOther"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLines="4"
        android:lines="4"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioProfile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/repProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reputationBio"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bioInProfileOther" />

    <RatingBar
        android:id="@+id/ratingBarOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repProfile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/report"
        android:minWidth="120dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerReport" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/starButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:minWidth="120dp"
        android:text="@string/star"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBarOther"
        app:layout_constraintEnd_toEndOf="@+id/report"
        app:layout_constraintStart_toStartOf="@+id/report"
        app:layout_constraintTop_toTopOf="@+id/ratingBarOther" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:gravity="center"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarOther"
        app:layout_constraintVertical_bias="0.15" >


    </androidx.appcompat.widget.AppCompatSpinner>

</androidx.constraintlayout.widget.ConstraintLayout>
